Fix sidebar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -104,16 +104,30 @@ button:hover {
     top: 0;
     left: 0;
     height: calc(100vh - 60px);
-    width: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    width: 50px;
     background-color: #000000;
+    overflow-y: hidden;
 }
 
-.upper-sidebar, 
+.upper-sidebar, .lower-sidebar div {
+    margin-left: 15px; 
+}   
+
 .lower-sidebar {
-    margin-left: 10px;
+    margin-top: auto;
+}
+
+.playlist {
+   margin-left: 15px;
+   display: flex;
+   flex-direction: column;
+   overflow-y: hidden;
+}
+
+.playlist-menu {
+    overflow-y: auto;
 }
 
 .sidebar img {
@@ -124,10 +138,11 @@ button:hover {
 
 .sidebar .spotify-logo-text {
     width: 90%;
+    margin: 10px 0;
 }
 
-.playlist, .sidebar h4 {
-    margin-top: 15px;
+.sidebar h4 {
+    margin: 15px 0;
 }
 
 .background-grey {
@@ -142,7 +157,7 @@ button:hover {
 }
 
 hr {
-    width: 90%;
+    margin: 0 15px;
     opacity: 0.5;
 }
 
@@ -150,8 +165,8 @@ hr {
     content: "";
     border-right: 2px solid limegreen;
     display: inline;
-    margin-right: 8px;
-    margin-left: -10px;
+    margin-right: 11px;
+    margin-left: -13px;
     vertical-align: middle;
 }
 
@@ -163,11 +178,10 @@ main {
     background-color: #141922;
     color: white;
     padding-left: 50px;
-    padding-top: 60px;
 }
 
 main ul {
-    margin: 30px auto;
+    margin: 90px auto 30px auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -285,7 +299,7 @@ footer {
     top: 0;
     left: 0;
     background-color: white;
-    width: 20%;
+    width: 40%;
     height: 100%;
     border-radius: 5px;
 }
@@ -327,29 +341,41 @@ footer {
     background-color: limegreen;
 }
 
+.song-status:hover .white-bar::after,
+.right-footer:hover .white-bar::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: white;
+}
+
 /* RESPONSIVE */
 
 @media screen and (min-width: 576px) {
     main {
-        padding-left: 170px;
+        padding-left: 180px;
     }
 
     .sidebar {
-        width: 170px;
+        width: 180px;
     }
 
     #main-header {
-        left: 170px;
-        width: calc(100% - 170px);
+        left: 180px;
+        width: calc(100% - 180px);
     }
 
-    .none {
-        display: inline-block;
+    .d-block {
+        display: block;
     }
 
-    .spotify-logo-text {
-        width: 80%;
-        margin: 10px 0;
+    .d-inline {
+        display: inline;
     }
 
     .spotify-logo {
